--- a/styles/_layoutTopMobile.scss
+++ b/styles/_layoutTopMobile.scss
@@ -1,24 +1,20 @@
-.layout-top-mobile {
-    position: fixed;
-    width: 100vw;
-    top: 0;
-    background: rgba(72, 38, 136, 0.6);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(7px);
-    border-radius: 0px 0px 8px 8px;
-    transition: top 0.25s ease;
+@media (max-width: $bp-phone) {
+    .layout-top-mobile {
+        position: fixed;
+        width: 100vw;
+        top: 0;
+        background: rgba(72, 38, 136, 0.6);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        backdrop-filter: blur(7px);
+        border-radius: 0px 0px 8px 8px;
+        transition: top 0.25s ease;
 
-    &.hidden {
-        top: -200px;
+        &.hidden {
+            top: -200px;
+        }
     }
 
-    @media (min-width: calc($bp-phone + 1px)) {
-        display: none;
-    }
-}
-
-.top-menu {
-    @media (max-width: calc($bp-phone)) {
+    .top-menu {
         flex-direction: column;
         width: 100vw;
         margin: 30px 0 0 0;
@@ -36,20 +32,16 @@
             }
         }
     }
-}
 
-.user-toolbox {
-    @media (max-width: $bp-phone) {
-        width: calc(50vw + 85px) !important;
-        justify-content: space-between !important;
+    .user-toolbox {
+        width: calc(50vw + 85px);
+        justify-content: space-between;
         display: flex;
         flex-direction: row-reverse;
-        padding: 0 0 0 20px !important;
+        padding: 0 0 0 20px;
     }
-}
 
-.wallet-adapter-button-trigger {
-    @media (max-width: $bp-phone) {
+    .wallet-adapter-button-trigger {
         width: 150px;
         height: 41px;
         background-color: rgba(0, 0, 0, 0);
@@ -60,21 +52,22 @@
         font-weight: 400;
         font-size: 15px;
         text-align: center;
-        padding: 16px !important;
+        padding: 16px;
         justify-content: center;
     }
-}
 
-.wallet-adapter-button-trigger:not([disabled]):hover {
-    @media (max-width: $bp-phone) {
-    background: #e00a7f;
-    border: 1px solid #e00a7f;
-    box-shadow: 0px 0px 4px #e00a7f;
+    .wallet-adapter-button-trigger:not([disabled]):hover {
+        background: #e00a7f;
+        border: 1px solid #e00a7f;
+        box-shadow: 0px 0px 4px #e00a7f;
+    }
+
+    .theme-switcher {
+        margin: 8px 0 0 10px;
     }
 }
-
-.theme-switcher{
-    @media (max-width: $bp-phone) {
-        margin-top: 8px !important;
+@media (min-width: calc($bp-phone + 1px)) {
+    .layout-top-mobile {
+        display: none;
     }
 }
