--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  position: relative;
+  z-index: 1;
 
   .btn--filters {
     z-index: 2;
@@ -110,7 +112,7 @@
   margin-bottom: -200px;
   display: flex;
   justify-items: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   transform: scaleY(0);
   transition: transform 0.3s ease-in-out, padding 0.3s ease-in-out, margin 0.3s ease-in-out;
